--- a/index.html
+++ b/index.html
@@ -6,33 +6,55 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca&display=swap"
+    rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | 3-column preview card component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  
-  Sedans
-  Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city 
-  or on your next road trip.
+  <main>
 
-  SUVs
-  Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation 
-  and off-road adventures.
+    <article class="cards-container">
 
-  Luxury
-  Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury 
-  rental and arrive in style.
+      <div class="sedans card-type">
+        <img src="images/icon-sedans.svg" alt="">
+        <p class="card-title">Sedans</p>
+        <p class="card-description">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the
+          city
+          or on your next road trip.</p>
+        <button type="button">Learn More</button>
+      </div>
+      
+      <div class="suvs card-type">
+        <img src="images/icon-suvs.svg" alt="">
+        <p class="card-title">SUVs</p>
+        <p class="card-description">Take an SUV for its spacious interior, power, and versatility. Perfect for your next
+          family vacation
+          and off-road adventures.</p>
+        <button type="button">Learn More</button>
+      </div>
+
+      <div class="luxury card-type">
+        <img src="images/icon-luxury.svg" alt="">
+        <p class="card-title">Luxury</p>
+        <p class="card-description">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a
+          luxury
+          rental and arrive in style.</p>
+        <button type="button">Learn More</button>
+      </div>
+
+    </article>
+
+  </main>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">justPulfer</a>.
   </div>
 </body>
 </html>
