--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p class="card-description">Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the
           city
           or on your next road trip.</p>
-        <button type="button">Learn More</button>
+        <a>Learn More</a>
       </div>
       
       <div class="suvs card-type">
@@ -36,7 +36,7 @@
         <p class="card-description">Take an SUV for its spacious interior, power, and versatility. Perfect for your next
           family vacation
           and off-road adventures.</p>
-        <button type="button">Learn More</button>
+        <a href="#">Learn More</a>
       </div>
 
       <div class="luxury card-type">
@@ -45,7 +45,7 @@
         <p class="card-description">Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a
           luxury
           rental and arrive in style.</p>
-        <button type="button">Learn More</button>
+        <a>Learn More</a>
       </div>
 
     </article>
